# Streamlit-AI-Applications

.devcontainer/: devcontainer.json
Assisgment 4/Assignment 00 to 05/: 00_intro_python.py  01_expressions.py  02_lists.py  03_if_statements.py  04_dictionaries.py  05_loops_control_flow.py  06_functions.py  07_information_flow.py
Assisgment 4/Assignments 01/: 01_basics.py
Assisgment 4/Assignments 01/02_intermediate/: Control Flow for Console.py  Intro to Python.py  Lists and Dicts.py
Assisgment 4/Assignments 1 to 6/: binary_search.py  bulkfile_renamer.py  countdown_timer.py  hangman.py  mad_libs_project.py  markov_chain_text_composer.py  minesweeper.py  number_guess_game.py  number_guess_game_computer.py  number_guess_game_user.py  password_generator.py  photo_manipulation.py  qr_code_encoder_decoder.py  rock_paper_scissors.py  snake_game.py  sudoku_solver.py  tetris.py  text.txt  tic_tac_toe.py  tic_tac_toe_ai.py  weather_program.py  web_scraping.py
Assisgment 4/Assignments 1 to 6/bmi_calculator_web/: main.py  (+1 more)
Build_Compose_and_Decorate_A_Complete_Traditional_OOP_Practice_Series/: main.py
Password-Strength-Meter/: ai_analyzer.py  main.py  manual_analyzer.py  password_generator.py  pyproject.toml  requirements.txt
Personal Library Manager/: library_manager.py
Secure-Data-Encryption/: app.py  pages.py  pyproject.toml  requirements.txt  utils.py
Unit Calculator/: .env  main.py  pyproject.toml
Unit Calculator/agent_with_tools/: tools.py
Unit-Calculator/: main.py  pyproject.toml  requirements.txt
Unit-Calculator/agent_with_tools/: agent.py
(+14 files in other folders)
